Fixed highlighting bug. Workaround for Chrome invisible map issue

--- a/app/assets/stylesheets/hpi.css.scss
+++ b/app/assets/stylesheets/hpi.css.scss
@@ -79,8 +79,8 @@ $lr-yellow: #e5ea08;
   }
 
   #map {
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
   }
 }
 
@@ -88,3 +88,4 @@ $lr-yellow: #e5ea08;
 .leaflet-tile-container img {
 -webkit-backface-visibility: hidden;
 }
+
